# OOP_lab7

./: CMakeLists.txt  main.cpp
include/: battle.h  druid.h  factory.h  npc.h  observers.h  ork.h  squirrel.h
src/: battle.cpp  druid.cpp  factory.cpp  npc.cpp  observers.cpp  ork.cpp  squirrel.cpp
tests/: npc_test.cpp
